--- a/lib/lv_demo_web/templates/page/index.html.eex
+++ b/lib/lv_demo_web/templates/page/index.html.eex
@@ -3,6 +3,12 @@
   <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
 </section>
 
+<%= if @current_user do %>
+  <%= live_render(@conn,
+                  LvDemoWeb.DashboardLive,
+                  session: %{current_user: @current_user}) %>
+<% end %>
+
 <section class="row">
   <article class="column">
     <h2>Resources</h2>
